@@ -2,7 +2,7 @@ Source: libvmdk
 Section: unknown
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 7), autotools-dev
+Build-Depends: debhelper (>= 7), autotools-dev, libfuse-dev, python-dev
 Standards-Version: 3.8.3
 Homepage: http://code.google.com/p/libvmdk/
 
@@ -26,4 +26,11 @@ Architecture: any
 Depends: libvmdk (= ${Source-Version}), ${shlibs:Depends}
 Description: Several tools for reading VMware Virtual Disk (VMDK) files
  Several tools for reading VMware Virtual Disk (VMDK) files.
+
+Package: libvmdk-python
+Section: python
+Architecture: any
+Depends: libvmdk (= ${Source-Version}), ${shlibs:Depends}, ${python:Depends}
+Description: Python bindings for libvmdk
+ Python bindings for libvmdk.
 
