@@ -7,6 +7,8 @@
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
+PYTHON_PACKAGE_DIR=$(shell python -c "import distutils.sysconfig;print distutils.sysconfig.get_python_lib(True) ")
+
 
 %:
 	dh  $@
@@ -38,9 +40,17 @@ install_libvmdk_tools:
 	install -p -m755 debian/tmp/usr/bin/* debian/libvmdk-tools/usr/bin
 	install -p -m755 debian/tmp/usr/share/man/man1/* debian/libvmdk-tools/usr/share/man/man1
 
+install_libvmdk_python:
+	# Set up libvmdk-python package directories and files
+	mkdir -p debian/libvmdk-python/$(PYTHON_PACKAGE_DIR)
+	install -p -m775 debian/tmp$(PYTHON_PACKAGE_DIR)/pyvmdk.* debian/libvmdk-python$(PYTHON_PACKAGE_DIR)
+
+override_dh_auto_configure:
+	dh_auto_configure -- --enable-python
+
 override_dh_auto_test:
 
-override_dh_installinit: install_libvmdk install_libvmdk_dev install_libvmdk_tools
+override_dh_installinit: install_libvmdk install_libvmdk_dev install_libvmdk_tools install_libvmdk_python
 
 override_dh_installmenu:
 
@@ -67,6 +77,8 @@ override_dh_gconf:
 override_dh_icons:
 
 override_dh_perl:
+
+override_dh_pysupport:
 
 override_dh_shlibdeps:
 	dh_shlibdeps -Llibvmdk -l${PWD}/debian/tmp/usr/lib
