@@ -1,7 +1,7 @@
 <pkgref spec="1.12" uuid="65C4536A-50F0-417B-9961-55F31E4C2637">
 <config>
 	<identifier>com.google.code.p.libvmdk.lib.pkg</identifier>
-	<version>20131008</version>
+	<version>20131017</version>
 	<description/>
 	<post-install type="none"/>
 	<requireAuthorization/>
