@@ -1,7 +1,7 @@
 <pkgref spec="1.12" uuid="CB5F6411-5CA7-404F-A840-8BBE45DD8912">
 <config>
 	<identifier>com.google.code.p.libvmdk.share.pkg</identifier>
-	<version>20131008</version>
+	<version>20131017</version>
 	<description/>
 	<post-install type="none"/>
 	<requireAuthorization/>
