@@ -196,6 +196,10 @@
 				RelativePath="..\..\pyvmdk\pyvmdk_handle.c"
 				>
 			</File>
+			<File
+				RelativePath="..\..\pyvmdk\pyvmdk_integer.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -212,6 +216,10 @@
 			</File>
 			<File
 				RelativePath="..\..\pyvmdk\pyvmdk_handle.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\pyvmdk\pyvmdk_integer.h"
 				>
 			</File>
 			<File
